--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,30 @@
 }
 /* Home page */
 .home {
+  background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/b4c7f092-0488-48b7-854d-ca055a84fb4f/b0be67e5-d52f-4ef1-9496-c9d3054cad3b/TN-en-20231204-popsignuptwoweeks-perspective_alpha_website_large.jpg);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 50vh;
-  margin: 100px auto;
+  /* min-height: 50vh; */
+  /* margin:  auto; */
+  padding: 250px;
+  /* height: 100vh; */
+}
+.home h1 {
+  /* border: 2px black solid; */
+  color: white;
+  font-size: 3rem;
+  font-weight: 900;
+  /* margin-bottom: -150px; */
+  /* margin: 250px; */
+}
+.home p {
+  color: white;
+  font-size: 1.5rem;
+  font-weight: 400;
+  /* margin: -20px; */
+  /* margin-bottom: 100px; */
 }
 /* Movies page */
 .movies {
@@ -17,6 +36,9 @@
   min-height: 50vh;
   margin: 100px auto;
 }
+.lsit-movies-footer {
+border: 2px solid black
+;}
 /* Movie page */
 .movie {
   display: flex;
@@ -26,31 +48,57 @@
 /* Login page */
 .login {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 50vh;
-  margin: 100px auto;
+  /* margin: 100px auto; */
+  background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/b4c7f092-0488-48b7-854d-ca055a84fb4f/b0be67e5-d52f-4ef1-9496-c9d3054cad3b/TN-en-20231204-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+  min-height: 100vh;
 }
 .login-form {
-  border: 2px rgba(95, 95, 95, 0.155) solid;
+  border: 2px rgba(95, 95, 95, 0) solid;
   padding: 40px 50px;
   border-radius: 20px;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.75);
+}
+.btn-login-bg {
+  all: unset;
+  background-color: red !important ;
 }
 /* Register page */
 .register {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 50vh;
-  margin: 100px auto;
+  /* min-height: 50vh; */
+  /* margin: 100px auto; */
+  background-image: url(https://assets.nflxext.com/ffe/siteui/vlv3/b4c7f092-0488-48b7-854d-ca055a84fb4f/b0be67e5-d52f-4ef1-9496-c9d3054cad3b/TN-en-20231204-popsignuptwoweeks-perspective_alpha_website_large.jpg);
+  min-height: 100vh;
 }
 .register-form {
   border: 2px rgba(95, 95, 95, 0.155) solid;
   padding: 40px 50px;
   border-radius: 20px;
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.75);
 }
+
+/* NavBar section */
+#nav-bacground-color {
+  /* border: 2px solid black; */
+  background-color: black !important;
+  color: white;
+}
+.link-nav {
+  list-style: none !important;
+}
+
+#conx-nav-bacground-color {
+  background-color: black !important;
+}
+
 /* btn login and register */
 .btn-login-register {
   all: unset;
@@ -61,6 +109,7 @@
   text-align: center;
   border-radius: 0.25rem;
 }
+
 /* Movies section */
 .btn-btn {
   all: unset;
@@ -122,8 +171,8 @@
 /*  */
 .card-lsit {
   display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 .card-cadre {
   /* border:  2px solid orange; */
@@ -160,7 +209,7 @@ h6:hover {
   color: #303030;
   font-weight: 700;
   cursor: pointer;
-  margin-top: -40px;
+
   margin-left: 15px;
 }
 .icon-card {
