--- a/src/Components/FooterSection/Style.css
+++ b/src/Components/FooterSection/Style.css
@@ -1,13 +1,18 @@
 .footerSection {
   /* border: 2px solid black; */
-  height: 35vh;
-  background-color: hsl(210, 16%, 98%);
+  /* height: 35vh; */
+  /* background-color: hsl(210, 16%, 98%); */
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1903px;
-  margin-top: 540px;
+  width:1900px;
+  margin-top: 35px;
   background-color: rgba(0,0,0,.75);
+
+ position: relative;
+ right: 500px;
+ top: 70px;
+ 
 }
 .footer-containr {
   /* border: 2px solid rgb(185, 10, 10); */
