--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   /* min-height: 50vh; */
   /* margin:  auto; */
   padding: 250px;
-  /* height: 100vh; */
+  height: 100vh;
 }
 .home h1 {
   /* border: 2px black solid; */
@@ -30,15 +30,14 @@
 }
 /* Movies page */
 .movies {
+  
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 50vh;
-  margin: 100px auto;
+  /* margin: 100px auto; */
 }
-.lsit-movies-footer {
-border: 2px solid black
-;}
+
 /* Movie page */
 .movie {
   display: flex;
@@ -124,8 +123,12 @@ border: 2px solid black
   height: 20px;
 }
 .restart-btn {
-  /* border: solid white 2px; */
-  margin-right: 26px;
+  /* border: solid rgb(6, 6, 6) 2px; */
+position: relative;
+top: 10px;
+left: 5px;
+
+ 
 }
 .List-containr-movies {
   /* border: 2px solid red; */
@@ -134,6 +137,14 @@ border: 2px solid black
   margin: auto;
   padding: 70px;
 }
+.search-movies {
+  display: flex;
+  justify-content: flex-end;
+}
+.ratinggg {
+  display: flex;
+}
+
 .List-containr-btns {
   /* border: 2px solid black; */
   display: flex;
@@ -167,12 +178,16 @@ border: 2px solid black
   padding: 8px 20px 8px 40px;
 
   opacity: 0.9;
+  
 }
 /*  */
 .card-lsit {
+  /* border:  2px solid orange; */
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
+  min-height: 158vh;
+  gap: 25px;
 }
 .card-cadre {
   /* border:  2px solid orange; */
@@ -220,4 +235,7 @@ h6:hover {
   font-size: 10px;
   margin-left: 150px;
   margin-top: -65px;
+}
+.footer-home-section {
+  border: 2px solid rgb(245, 245, 245);
 }
