--- a/src/Components/Genre/Style.css
+++ b/src/Components/Genre/Style.css
@@ -1,9 +1,9 @@
 .footermovie {
     /* border: 2px solid rgb(10, 185, 71); */
-    width: 290px;
-    height: 350px;
+    width: fit-content;
+    height: 200px;
     margin-left: 60px;
-    margin-bottom: -30px;
+    margin-top: 50px;
     color: white;
     
   }
